<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn=".MainActivity">

    <TextView
        android:id="@+id/tvFocusOrderActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/focus_order_activity_title"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/tvNoToolbarActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/no_toolbar_activity_title"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/tvListActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/list_activity_title"
        android:textColor="@color/colorPrimaryText" />

</LinearLayout>