<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/a11y_android_widgets_image_content_description"
        android:src="@drawable/ic_android_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autoLink="web"
        android:text="@string/android_widgets_activity_text_view"
        app:layout_constraintBottom_toBottomOf="@id/ivImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/ivImageView"
        app:layout_constraintTop_toTopOf="@id/ivImageView" />

    <Button
        android:id="@+id/btButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/android_widgets_activity_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImageView" />

    <ImageButton
        android:id="@+id/ibImageButton"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/a11y_android_widgets_image_button_content_description"
        android:src="@drawable/ic_android_black_24dp"
        android:text="@string/android_widgets_activity_button"
        app:layout_constraintBottom_toBottomOf="@id/btButton"
        app:layout_constraintStart_toEndOf="@id/btButton"
        app:layout_constraintTop_toTopOf="@id/btButton" />

</androidx.constraintlayout.widget.ConstraintLayout>